chore: menu scroll behavior on mobile fix

--- a/src/components/LeftSidebar/SidebarContent.scss
+++ b/src/components/LeftSidebar/SidebarContent.scss
@@ -15,7 +15,6 @@
 
 
 	.nav-group {
-		line-height: 21px;
 		padding: .5rem 0;
 
 		a {
@@ -48,6 +47,7 @@
 		}
 
 		.nav-group-title h2 {
+			line-height: 200%;
 			max-width: 100%;
 			text-indent: 2px;
 			justify-content: space-between;
@@ -122,10 +122,6 @@
 		}
 	}
 
-	.nav-link {
-		padding: 0.3rem 1rem;
-	}
-
 	.nav-link a, .nav-link details summary h2 {
 		width: 100%;
 		margin: 1px;
@@ -184,10 +180,6 @@
 					color: var(--color-orange);
 				}
 			}
-		}
-
-		.nav-link {
-			padding: 0;
 		}
 
 		.nav-link a, .nav-link details summary h2 {
